assets/style.css
/* reset css */
:root,html,body,section{
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}
html{
	font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
}
a{
	color: royalblue;
}
label{
	cursor: pointer;
}
h1{
	padding: 0.2em;
	margin: 0;
	font-weight: normal;
}
h2{
	padding: 0.2em 0.3em;
	margin: 0;
	font-weight: normal;
	border-bottom: 1px solid lightgrey;
}

/* default page style */
body{
	min-height: 100vh;
	display: flex;
	flex-direction: column;
}
header{
	border-top: 5px solid deeppink;
	text-align: center;
}
main{
	flex-grow: 1;
	padding: 0 1rem;
	background-color: #eee;
	box-shadow: 2px 2px 6px -3px black inset;
}
main>section{
	max-width: 800px;
	margin: 1.2rem auto;
	padding: 0.5rem;
	border-radius: 0.5em;
	background-color: white;
	box-shadow: 2px 2px 6px -3px black;
}
footer{
	padding: 0.4em;
	text-align: center;
	border-bottom: 5px solid deeppink;
}

/* component styles */
.header-link{
	display: block;
	color: black;
	text-decoration: none;
}

.select-box{
	display: flex;
	flex-wrap: wrap;
	min-height: 4em;
}
.select-box input{
	display: none;
}
.select-box label{
	width: 4em;
	padding: 0.4em 0;
	margin: 0.4em;
	flex-grow: 1;
	border: 2px solid #eee;
	border-radius: 0.3em;
	text-align: center;
	font-size: 0.9em;
	transition: border-color 0.15s;
	user-select: none;
}
.select-box input:checked+label{
	border: 2px solid deeppink;
	background-color: lavenderblush;
}
.select-box label:hover{
	border: 2px solid deeppink;
}

